fix(project): prevent project tag from wrapping

--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -56,6 +56,7 @@
   border-radius: 5px;
   border-style: solid;
   border-width: 1px;
+  white-space: nowrap;
 }
 
 .completeTag {
